--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "url": "git+https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-build-a-web-api"
     },
     "dependencies": {
-        "express": "4.18.1",
+        "express": "^4.18.1",
         "helmet": "5.0.2",
         "knex": "2.0.0",
         "sqlite3": "5.0.8"
@@ -23,7 +23,7 @@
         "eslint": "8.14.0",
         "jest": "28.1.0",
         "knex-cleaner": "1.3.1",
-        "nodemon": "^2.0.15",
+        "nodemon": "^2.0.16",
         "supertest": "6.2.3"
     },
     "license": "ISC"
