--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "node index.js",
         "server": "nodemon index.js",
-        "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+        "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
         "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
     },
     "repository": {
@@ -13,9 +13,11 @@
         "url": "git+https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-build-a-web-api"
     },
     "dependencies": {
+        "colors": "^1.4.0",
         "express": "^4.18.1",
         "helmet": "5.0.2",
         "knex": "2.0.0",
+        "morgan": "^1.10.0",
         "sqlite3": "5.0.8"
     },
     "devDependencies": {
